# tmf882x-driver

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yaml  test.yaml
src/tmf882x/: __init__.py  constants.py  measurement.py
tests/: test_measurement.py
